--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
         "ext-gd": "*",
         "ext-json": "*",
         "ext-pdo": "*",
-        "ext-zip": "*"
+        "ext-zip": "*",
+        "symfony/uid": "^5.2",
+        "symfony/http-foundation": "^5.2",
+        "ext-curl": "*",
+        "ext-fileinfo": "*"
     }
 }
